# scientific-calculator

./: README.md  pyproject.toml
documentation/: implementation.md  project_definition.md  testing_document.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: calculator.py  index.py
src/algorithms/: algorithm_helpers.py  reverese_polish.py  reverse_polish.py  shunting_yard.py
src/tests/: algorithm_helpers_test.py  calculator_test.py  reverese_polish_test.py  reverse_polish_test.py  shunting_yard_test.py
src/ui/: calculator_view.py  ui.py
