[tool.poetry]
name = "scientific-calculator"
version = "0.1.0"
description = ""
authors = ["Kristiina Suominen"]
readme = "README.md"
packages = [{include = "scientific_calculator"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
